# Projet-MLOps-imo-YAA

./: .dockerignore  .gitignore  Dockerfile  README.md  activate.py  california_housing_exploratory_analysis.ipynb  compose.yaml  config.py  main.py  mlflow.db  model_save.py  pyproject.toml  run.py  split_train_test.py  streamlit_interface.py  train_california_house2.py  train_california_house3.py  train_california_housing.py
.github/workflows/: python-tests.yml
california_houseprice_prediction/application/: __init__.py  api.py  fetch_model.py  main.py  mlflow_model_serving.py
california_houseprice_prediction/domain/: __init__.py  load_saved_model.py  log_params_metrics_model.py  register_model.py  save_model.py  train_and_log_base_model.py  train_and_log_gradient_boosting_model.py  train_and_log_random_forest_model.py  train_base_model.py  train_gradient_boosting_model.py  train_linear_regression_model.py  train_random_forest_model.py  validate_model.py
california_houseprice_prediction/infrastructure/: __init__.py  load_and_split_data.py  split_data_train_test.py
california_houseprice_prediction/interface/: streamlit_interface.py  user_interface.py
mlruns/0/: meta.yaml
mlruns/213576495027065697/: meta.yaml
mlruns/692593147140202694/: meta.yaml
mlruns/775506593133102951/: meta.yaml
notebooks/: experiments.ipynb  shap_analysis.ipynb
src/: train.py
tests/: test_api.py  test_load_and_split_data.py  test_streamlit_interface.py  test_train_and_log_base_model.py  test_train_and_log_model.py
tests/application/: test_api.py  test_fetch_model.py  (+3 more)
ui/: api.py  prediction_ui.py
(+37 files in other folders)
