[tool.poetry]
name = "projet-mlops-imo-yaa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "california_houseprice_prediction", from = "."}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
mlflow = "^2.19.0"
scikit-learn = "^1.6.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
requests = "^2.32.3"
streamlit = "^1.41.1"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
