[project]
name = "projet-mlops-imo-yaa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "ipykernel>=7.2.0",
    "mlflow>=3.11.1",
    "pydantic>=2.13.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pytest>=9.0.3",
]
